# tms_django

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
tms_django/: manage.py
tms_django/admin/manager_admin/: admin.py
tms_django/admin/super_admin/: admin.py
tms_django/api/: urls.py
tms_django/api/v1/: api_key.py  serializers.py  test_api.py  urls.py  views.py
tms_django/apps/tms/: apps.py  generators.py  models.py  urls.py  views.py
tms_django/apps/tms/migrations/: 0001_initial.py  0002_broker_mc_number_driverprofile_address_and_more.py  0003_remove_bookedload_supported_truck_kind.py  0004_alter_bookedload_invoice_id.py
tms_django/apps/tms/templates/: bookedload_confirm_delete.html  bookedload_create_form.html  bookedload_detail.html  bookedload_list.html  bookedload_update_form.html  home_page.html
tms_django/apps/tms/tests/: factories.py  test_models.py
tms_django/apps/users/: managers.py  models.py
tms_django/apps/users/tests/: factories.py  test_models.py
tms_django/config/: settings.py  urls.py
tms_django/tms/: apps.py
tms_django/tms_django/: asgi.py  settings.py  urls.py  wsgi.py
tms_django/users/migrations/: 0001_initial.py
